<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">到了么</string>
    <string name="action_settings">Settings</string>
    <string name="sign_up">注册</string>
    <string name="login_in">登录</string>
    <string name="user_name">用户名</string>
    <string name="pass_word">密码</string>
    <string name="pass_word_repeat">重复密码</string>
    <string name="create_a_group">创建一个组</string>
    <string name="group_name">组</string>
    <string name="refresh">刷新</string>
    <string name="edit_group">修改</string>
    <string name="add_user">添加组员</string>
	<string name="create_group">创建小组</string>
	<string name="name_of_group">组名</string>
	<string name="location">地点</string>
	<string name="time">时间</string>
	<string name="default_time">2013/10/16 14:19</string>
	<string name="latitude">纬度</string>
	<string name="longitude">经度</string>
</resources>
