<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" 
        android:layout_gravity="right">

        <TextView
            android:id="@+id/my_group"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/group_name"
            android:textSize="30sp" />

        <Button
            android:id="@+id/refresh_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/refresh" />
    </LinearLayout>

   <com.baidu.mapapi.map.MapView android:id="@+id/bmapsView"  
                    android:layout_width="match_parent"  
                    android:layout_height="wrap_content"  
                    android:clickable="true" />  

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         >

        <Button
            android:id="@+id/edit_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_group" />

        <Button
            android:id="@+id/add_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:text="@string/add_user" />

    </RelativeLayout>

</LinearLayout>