<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout 
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal"
    	android:layout_gravity="right">
        
        <TextView
	        android:id="@+id/my_username"
	        android:layout_width="0dip"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/user_name"
	        android:textSize="30sp" />
        
        <Button 
            android:id="@+id/refresh_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/refresh"/>
    </LinearLayout>
 
    <ListView
        android:id="@+id/groups_list"
        android:layout_width="match_parent"
        android:layout_height="300dp" >
    </ListView>

    <Button
        android:id="@+id/create_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/create_a_group" />
        
</LinearLayout>
