<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <EditText
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/create_group_name"
        android:layout_alignParentRight="true"
        android:layout_marginRight="43dp"
        android:layout_toRightOf="@+id/textView3"
        android:ems="10"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/create_group_name"
        android:layout_below="@+id/create_group_name"
        android:layout_marginTop="36dp"
        android:text="@string/pass_word" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignLeft="@+id/username"
        android:layout_alignRight="@+id/username"
        android:ems="10"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="39dp"
        android:text="@string/pass_word_repeat" />

    <EditText
        android:id="@+id/password_repeat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignLeft="@+id/password"
        android:layout_alignRight="@+id/password"
        android:ems="10"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/create_group_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="42dp"
        android:layout_marginTop="70dp"
        android:text="@string/user_name" />

    <Button
        android:id="@+id/submit_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_repeat"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="84dp"
        android:text="@string/sign_up" />

</RelativeLayout>